--- a/prac_08/convert_miles_km.kv
+++ b/prac_08/convert_miles_km.kv
@@ -3,18 +3,28 @@ BoxLayout:
     BoxLayout:
         orientation: 'horizontal'
         TextInput:
+            size_hint_x: 0.8
             id: input_miles
+            multiline: False
             text: ''
+            font_size: 48
         BoxLayout:
             orientation: 'vertical'
+            size_hint_x: 0.2
             Button:
                 text: 'Up'
+                font_size: 24
                 on_press: handle_up()
             Button:
                 text: 'Down'
+                font_size: 24
                 on_press: handle_down()
     Button:
         text: 'Convert'
+        font_size: 24
         on_press: handle_convert()
     Label:
         id: output_km
+        text: '0.00'
+        font_size: 48
+        color: (1, 1, 0, 1)
