--- a/prac_08/convert_miles_km.kv
+++ b/prac_08/convert_miles_km.kv
@@ -6,7 +6,7 @@ BoxLayout:
             size_hint_x: 0.8
             id: input_miles
             multiline: False
-            text: ''
+            text: app.input_miles
             font_size: 48
         BoxLayout:
             orientation: 'vertical'
@@ -14,17 +14,17 @@ BoxLayout:
             Button:
                 text: 'Up'
                 font_size: 24
-                on_press: handle_up()
+                on_press: app.handle_increment(input_miles.text, 1)
             Button:
                 text: 'Down'
                 font_size: 24
-                on_press: handle_down()
+                on_press: app.handle_increment(input_miles.text, -1)
     Button:
         text: 'Convert'
         font_size: 24
-        on_press: handle_convert()
+        on_press: app.handle_convert(input_miles.text)
     Label:
         id: output_km
-        text: '0.00'
+        text: app.output_km
         font_size: 48
         color: (1, 1, 0, 1)
