--- a/prac_08/convert_miles_km.kv
+++ b/prac_08/convert_miles_km.kv
@@ -8,6 +8,7 @@ BoxLayout:
             multiline: False
             text: app.input_miles
             font_size: 48
+            on_text: app.handle_convert(input_miles.text)
         BoxLayout:
             orientation: 'vertical'
             size_hint_x: 0.2
@@ -19,10 +20,10 @@ BoxLayout:
                 text: 'Down'
                 font_size: 24
                 on_press: app.handle_increment(input_miles.text, -1)
-    Button:
-        text: 'Convert'
-        font_size: 24
-        on_press: app.handle_convert(input_miles.text)
+#    Button:
+#        text: 'Convert'
+#        font_size: 24
+#        on_press: app.handle_convert(input_miles.text)
     Label:
         id: output_km
         text: app.output_km
